--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,9 @@
+Fabric==1.5.1
 Flask==0.9
 Jinja2==2.6
 SQLAlchemy==0.7.9
 Werkzeug==0.8.3
+argparse==1.2.1
+paramiko==1.9.0
+pycrypto==2.6
+wsgiref==0.1.2
